[andy] update group new/edit page

--- a/app/javascript/front/index.scss
+++ b/app/javascript/front/index.scss
@@ -455,6 +455,12 @@ hr {
   .item-list {
     margin: 0px;
   }
+  .edit-group {
+    width: 100%;
+  }
+  .new-group {
+    width: 100%;
+  }
 }
 
 .topic-detail {
