--- a/app/views/groups/new.html.slim
+++ b/app/views/groups/new.html.slim
@@ -1,6 +1,8 @@
 - title_tag(t('groups.new_group'))
-.card.card-lg
-  .card-body
-    .card-title.hide-ios
-      = t('groups.new_group')
-    = render 'form'
+.row
+  .col-lg-9
+    div class=("groups groups-#{action_name} card")
+      .card-body.item-list
+        = render 'form'
+  .sidebar.col-lg-3
+    = render "groups/sidebar_for_group_create"
