--- a/app/views/groups/_form.html.slim
+++ b/app/views/groups/_form.html.slim
@@ -7,7 +7,7 @@
       .input-text.sub-title
         = t('groups.group_type')
       .input-group
-        .form-check.form-check-inline
+        .form-check.form-check-inline.privacy-check
           = f.radio_button :group_type, 'public_group', class: "radio-button" do
           = f.label :group_type do
             = '公开小组'
@@ -15,7 +15,7 @@
             = '- 小组内容对论坛任何人可见'
             br
             = '- 以后可以变为私密小组'
-        .form-check.form-check-inline
+        .form-check.form-check-inline.privacy-check
           = f.radio_button :group_type, 'private_group', class: "radio-button" do
           = f.label :group_type do
             = '私密小组'
@@ -41,6 +41,24 @@
       .input-text.sub-title
         = t('groups.group_description')
       = f.text_area :description, class: "group-editor form-control", rows: 10
+    .form-group.sub-title
+      .form-switch
+        .row
+          .switch-text
+            = t('groups.need_approvement_to_join')
+            = f.check_box :auto_approvce, class: 'form-check-input'
+    .form-group.sub-title
+      .form-switch
+        .row
+          .switch-text
+            = t('groups.show_group_members_to_public')
+            = f.check_box :show_members, class: 'form-check-input'
+    .form-group.sub-title
+      .row
+        .form-check.policy-check
+          = f.check_box :policy_agree, class: 'agreement-checkbox'
+          a.agreement-text
+            = t('groups.agreements_and_policies')
     .form-actions.jcsb.hide-ios
       - text = action_name == 'edit' ? t("common.save") : t("common.create")
       = f.submit text, class: "btn btn-primary", 'data-disable-with' => t("common.saving"), 'data-tb' => "save-group"
