--- a/app/views/groups/new.html.slim
+++ b/app/views/groups/new.html.slim
@@ -2,7 +2,7 @@
 .row
   .col-lg-9
     div class=("groups groups-#{action_name} card")
-      .card-body.item-list
+      .card-body.item-list.group-form-card-body
         = render 'form'
   .sidebar.col-lg-3
     = render "groups/sidebar_for_group_create"
