--- a/app/views/groups/edit.html.slim
+++ b/app/views/groups/edit.html.slim
@@ -3,7 +3,12 @@
   .col-lg-9
     div class=("groups groups-#{action_name} card card-lg") 
       .card-body.item-list
-        = render 'form'
+        .group-form style="width: 100%;"
+          = form_for @group, method: 'put', remote: true, class: "form", html: { tb: 'edit-group' } do |f|
+            = render "shared/error_messages", target: @group
+            .form-group.form-title
+              = t('groups.edit_group')
+            = render 'form', f: f
   .sidebar.col-lg-3
     = render "groups/sidebar_for_group_create"
 
