--- a/app/javascript/front/index.scss
+++ b/app/javascript/front/index.scss
@@ -479,10 +479,20 @@ hr {
       color: #111111;
       padding: 0px;
     }
-    .privacy-check {
+    .privacy-check-box {
       padding: 9px;
       width: 260px;
       height: 136px;
+      border: 2px solid #F4F4F4;
+      border-radius: 2px;
+      font-size: 14px;
+      line-height: 20px;
+      color: #666666;
+      .heading {
+        font-size: 14px;
+        line-height: 20px;
+        color: #111111;
+      }
     }
     .radio-button {
       width: 12px;
