--- a/app/views/groups/show.html.slim
+++ b/app/views/groups/show.html.slim
@@ -1,19 +1,44 @@
 .row
   .col-lg-9
-    .topic-detail.card
-      .media.user-card.mb-4
-        .media-body
-          .media-heading
-            = @group.name
-          - if @group.avatar.url.present?
-            .media-left.mr-3= image_tag(@group.avatar.url(:md), class: "media-object avatar-48")
-          .infos
-            .item.opts= @group.description
-          .infos
-             = @group.users.count.to_s + ' people joined this group.'
-          - if current_user.present? && @group.group_member?(current_user)
-            = link_to t('groups.Joined'), main_app.quite_group_group_users_path(group_id: @group.id), class: 'btn btn-primary btn-block btn-joined', method: :post
-          - else
-            = link_to t('groups.join_now'), main_app.join_group_group_users_path(group_id: @group.id), class: 'btn btn-primary', method: :post 
+    ul#myTab.nav.nav-tabs role="tablist"
+      li.nav-item
+        a#home-tab.nav-link.active aria-controls="home" aria-selected="true" data-toggle="tab" href="#home" role="tab"
+          = t('groups.infos')
+      li.nav-item
+        a#profile-tab.nav-link aria-controls="profile" aria-selected="false" data-toggle="tab" href="#profile" role="tab"
+          = t('groups.members')
+    #myTabContent.tab-content
+      #home.tab-pane.fade.show.active aria-labelledby="home-tab" role="tabpanel"
+        = 'infos'
+      #profile.tab-pane.fade aria-labelledby="profile-tab" role="tabpanel"
+        = 'members'
+
   .sidebar.col-lg-3
     = render "groups/sidebar_for_group_topics", group: @group
+
+javascript:
+  $('#myTab a').on('click', function (e) {
+    e.preventDefault()
+    $(this).tab('show')
+  })
+
+css:
+  .tab-content {
+    width: 100%;
+  }
+  .tab-pane {
+    background-color: white;
+    width: 100%;
+    min-height: 924px;
+  }
+  .nav-tabs li:first-child {
+    margin-left: 0px;
+  }
+  .nav-tabs .nav-item .nav-link.active {
+    color: #666;
+    color: var(--text-color1);
+    background: #fff;
+    background: var(--card-background-color);
+    border: 1px solid white;
+    border: 1px solid white;
+  }
