--- a/app/views/groups/show.html.slim
+++ b/app/views/groups/show.html.slim
@@ -3,33 +3,75 @@
     ul#myTab.nav.nav-tabs.group-nav-tab role="tablist"
       - if current_user.present? && @group.group_admin?(current_user)
         li.nav-item
-          a#home-tab.tab-text.nav-link.active aria-controls="home" aria-selected="true" data-toggle="tab" href="#home" role="tab"
+          a#info-one-tab.tab-text.nav-link.active aria-controls="info-one" aria-selected="true" data-toggle="tab" href="#info-one" role="tab"
             = t('groups.infos')
         li.nav-item
-          a#profile-tab.tab-text.nav-link aria-controls="profile" aria-selected="false" data-toggle="tab" href="#profile" role="tab"
+          a#members-one-tab.tab-text.nav-link aria-controls="members-one" aria-selected="false" data-toggle="tab" href="#members-one" role="tab"
             = t('groups.members')
       - else
         li.nav-item
-          a#profile-tab.tab-text.nav-link.active aria-controls="profile" aria-selected="false" data-toggle="tab" href="#profile" role="tab"
+          a#members-one-tab.tab-text.nav-link.active aria-controls="members-one" aria-selected="false" data-toggle="tab" href="#members" role="tab"
             = t('groups.members')
     #myTabContent.tab-content.groups
       - if current_user.present? && @group.group_admin?(current_user)
-        #home.tab-pane.fade.show.active aria-labelledby="home-tab" role="tabpanel"
+        #info-one.tab-pane.fade.show.active aria-labelledby="info-tab" role="tabpanel"
           .group-form.group-tab-content#group-info-content style="width: 100%;"
             = render partial: 'groups/content_form'
-        #profile.tab-pane.fade aria-labelledby="profile-tab" role="tabpanel"
+        #members-one.tab-pane.fade aria-labelledby="members-one-tab" role="tabpanel"
           .group-form.group-tab-content#group-members-content style="width: 100%;"
             = render partial: 'groups/members'
       - else
-        #profile.tab-pane.show.active aria-labelledby="profile-tab" role="tabpanel"
+        #members-one.tab-pane.show.active aria-labelledby="members-one-tab" role="tabpanel"
           .group-form.group-tab-content#group-members-content style="width: 100%;"
             = render partial: 'groups/members'
-
   .sidebar.col-lg-3#group-sidebar-content
-    = render "groups/sidebar_for_group_topics", group: @group
+    ul#myTab.nav.nav-tabs.group-nav-tab.fade role="tablist" style="height:0px;"
+      - if current_user.present? && @group.group_admin?(current_user)
+        li.nav-item
+          a#info-two-tab.nav-link.active aria-controls="info-two" aria-selected="true" data-toggle="tab" href="#info-two" role="tab"
+            = '0'
+        li.nav-item
+          a#members-two-tab.nav-link aria-controls="members-two" aria-selected="false" data-toggle="tab" href="#members-two" role="tab"
+            = '1'
+      - else
+        li.nav-item
+          a#members-two-tab.nav-link.active aria-controls="members-two" aria-selected="false" data-toggle="tab" href="#members-two" role="tab"
+            = '1'
+    #myTabContent.tab-content
+      - if current_user.present? && @group.group_admin?(current_user)
+        #info-two.tab-pane.fade.show.active aria-labelledby="info-two-tab" role="tabpanel"
+          = render "groups/sidebar_for_group_topics", group: @group
+        #members-two.tab-pane.fade aria-labelledby="members-two-tab" role="tabpanel"
+          - if current_user.present? && @group.group_member?(current_user)
+            .card
+              .card-body
+                = link_to t('topics.new_topic'), main_app.new_topic_path(group_id: @group.id), class: 'btn btn-primary btn-block'
+      - else
+        #members-two.tab-pane.show.active aria-labelledby="members-two-tab" role="tabpanel"
+          - if current_user.present? && @group.group_member?(current_user)
+            .card
+              .card-body
+                = link_to t('topics.new_topic'), main_app.new_topic_path(group_id: @group.id), class: 'btn btn-primary btn-block'
 
 javascript:
-  $('#myTab a').on('click', function (e) {
+  $('#info-one-tab').on('click', function (e) {
+    e.preventDefault()
+    $(this).tab('show')
+    $('#info-two-tab').click()
+  })
+
+  $('#members-one-tab').on('click', function (e) {
+    e.preventDefault()
+    $(this).tab('show')
+    $('#members-two-tab').click()
+  })
+
+  $('#info-two-tab').on('click', function (e) {
+    e.preventDefault()
+    $(this).tab('show')
+  })
+
+  $('#members-two-tab').on('click', function (e) {
     e.preventDefault()
     $(this).tab('show')
   })
