--- a/app/views/group_users/_edit.html.slim
+++ b/app/views/group_users/_edit.html.slim
@@ -25,10 +25,13 @@
   .footer
     .content
       - if group_user.accepted?
-        = link_to('Quite', main_app.quite_group_group_users_path(group_id: group.id), class: "btn btn-primary btn-join", method: :post)
+        = link_to(t('groups.quite'), main_app.group_group_user_path(group_id: group.id, id: group_user.id), class: "btn btn-primary btn-join", method: :delete)
       - elsif group_user.pendding?
-        = link_to('waiting', main_app.group_path(group), class: "btn btn-primary btn-join",)
-      - elsif group_user.rejected? || group_user.status == nil
-        = link_to('Join', main_app.join_group_group_users_path(group_id: group.id), class: "btn btn-primary btn-join", method: :post)
+        = link_to(t('groups.waiting'), main_app.group_path(group), class: "btn btn-primary btn-join",)
+      - elsif group_user.status == nil
+        - if group.public_group?
+          = link_to(t('groups.join'), main_app.group_group_users_path(group_id: group.id), class: "btn btn-primary btn-join", method: :post)
+        - else
+          = link_to(t('groups.apply'), main_app.group_group_users_path(group_id: group.id), class: "btn btn-primary btn-join", method: :post)
       button.btn.btn-primary.btn-join.modal-close-button[type='button' data-bs-dismiss='modal' aria-label='Close']
-        = t('group.cancel')
+        = t('groups.cancel')
