--- a/app/views/groups/_group_user_card.html.slim
+++ b/app/views/groups/_group_user_card.html.slim
@@ -12,73 +12,15 @@
       .card-tag.text-truncate
         = user.tagline
       .card-button
-        - if group_user.pendding?
-          = link_to :approve, '', remote: true, class: 'btn-opt btn-approve'
-          = link_to :reject, '', remote: true, class: 'btn-opt btn-approve'
-        - if group_user.member?
-          = link_to :upgrade, '', remote: true, class: 'btn-opt btn-upgrade'
-        - if group_user.admin?
-          = link_to :downgrade, '', remote: true, class: 'btn-opt btn-downgrade'
-        - if group_user.accepted?
-          = link_to :remove, '', remote: true, class: 'btn-opt btn-remove'
-
-css:
-  .group-user-card {
-    font-family: PingFang SC;
-    font-style: normal;
-    font-weight: normal;
-    height: 60px;
-    width: 276px;
-    margin-bottom: 30px;
-    margin-right: 12px;
-  }
-  .card-avatar {
-    margin-right: 6px;
-  }
-  .card-name {
-    font-size: 14px;
-    line-height: 20px;
-    color: #111111;
-    height: 20px;
-    max-length: 200px;
-  }
-  .card-tag {
-    font-size: 12px;
-    line-height: 17px;
-    color: #666666;
-    height: 17px;
-    margin-top: 3px;
-  }
-  .card-button {
-    font-size: 12px;
-    line-height: 17px;
-    color: #225EDA;
-    height: 17px;
-    margin-top: 3px;
-  }
-  .btn-opt {
-    margin-right: 12px;
-  }
-  .role-tag {
-    padding-top: 1px;
-    padding-left: 4px;
-    padding-right: 4px;
-    padding-bottom: 2px;
-    font-size: 12px;
-    line-height: 17px;
-    color: #FFFFFF;
-    border-radius: 2px;
-    margin-left: 7px;
-  }
-  .role-tag:hover {
-    color: #ffffff;
-  }
-  .owner-tag {
-    background: #F54821;
-  }
-  .admin-tag {
-    background: #12CE0F;
-  }
-  .member-tag {
-    background: #ffffff;
-  }
+        - if @current_group_user.admin? || @current_group_user.owner?
+          - if group_user.pendding?
+            = link_to(t('groups.approve'), group_group_user_path(id: group_user.id, group_id: group_user.group_id, opt: 'approve'), method: :put, class: 'btn-opt btn-approve', remote: true)
+          - if @current_group_user.owner?
+            - if group_user.member?
+              = link_to(t('groups.upgrade'), group_group_user_path(id: group_user.id, group_id: group_user.group_id, opt: 'upgrade'), method: :put, class: 'btn-opt btn-upgrade', remote: true)
+            - if group_user.admin?
+              = link_to(t('groups.downgrade'), group_group_user_path(id: group_user.id, group_id: group_user.group_id, opt: 'downgrade'), method: :put, class: 'btn-opt btn-downgrade', remote: true)
+          - if group_user.member? && group_user.accepted?
+            = link_to(t('groups.remove'), group_group_user_path(id: group_user.id, group_id: group_user.group_id, opt: 'remove'), method: :put, class: 'btn-opt btn-remove', remote: true)
+          - if group_user.member? && group_user.pendding?
+            = link_to(t('groups.reject'), group_group_user_path(id: group_user.id, group_id: group_user.group_id, opt: 'remove'), method: :put, class: 'btn-opt btn-approve', remote: true)
