--- a/app/javascript/front/home.scss
+++ b/app/javascript/front/home.scss
@@ -227,6 +227,7 @@ h2 {
       font-size: 16px;
       line-height: 22px;
       max-width: 189px;
+      color: #111111;
     }
     .sub-title {
       font-size: 14px;
