--- a/app/views/groups/_sidebar_for_group_create.html.slim
+++ b/app/views/groups/_sidebar_for_group_create.html.slim
@@ -5,13 +5,13 @@
       .title
         = t('groups.create')
       .body
-        pre
+        .text
           = t('groups.create_details')
     .info.content-body
       .title
         = t('groups.cautions')
       .body
-        pre
+        .text
           = t('groups.caution_details')
 
 .card
