--- a/app/views/groups/_sidebar_for_group_create.html.slim
+++ b/app/views/groups/_sidebar_for_group_create.html.slim
@@ -1,10 +1,9 @@
 .card
-  .card-body
-    div class=("group topic media topic-#{@group.id} content-header")
+  .card-body.sidebar-text-content
     .info.content-body
       .title
         = t('groups.create')
-      .body
+      .body.footer
         .text
           = t('groups.create_details')
     .info.content-body
@@ -15,5 +14,6 @@
           = t('groups.caution_details')
 
 .card
-  .card-body
-    = t('groups.create_group_policy')
+  .card-body.sidebar-text-content
+    .body
+      = t('groups.create_group_policy')
