--- a/app/views/groups/topics.html.slim
+++ b/app/views/groups/topics.html.slim
@@ -2,7 +2,7 @@
   - title_tag(@page_title || t('menu.topics'))
 .row
   .col-lg-9
-    div class=("topics topics-#{action_name} card") 
+    .topics.card class="topics-#{action_name}"
       .card-body.item-list
         = render TopicComponent.with_collection(@topics)
       - if @topics && @topics.total_pages > 1
@@ -21,3 +21,7 @@
         }
   .sidebar.col-lg-3
     = render "groups/sidebar_for_group_topics", group: @group
+
+.modal.edit-group-user-modal.fade#edit-group-user-modal[tabindex='-1' role='dialog']
+  .modal-dialog.modal-dialog-centered[role='document']
+    .modal-content.group-user-modal-content#edit-group-user-modal-body.edit-group-user-modal
