--- a/app/views/topics/_form.html.erb
+++ b/app/views/topics/_form.html.erb
@@ -1,7 +1,11 @@
 <%= form_for @topic, remote: true, class: "form", html: { tb: 'edit-topic' } do |f| %>
   <%= render "shared/error_messages", target: @topic %>
-  <%= f.hidden_field :group_id, value: @group_id %>
+  <%= f.hidden_field :group_id, value: @group.id %>
   <%= f.hidden_field :node_id %>
+  <div class="avatar form-control new-topic-group-avatar">
+    <%= user_avatar_tag(@group, :sm) %>
+    <%= @group.name %>
+  </div>
   <div class="form-group">
     <div class="input-group">
       <div class="input-group-prepend mr-1">
