[andy] update css

--- a/app/views/groups/_sidebar_for_group_topics.html.slim
+++ b/app/views/groups/_sidebar_for_group_topics.html.slim
@@ -5,7 +5,7 @@
         - if group.avatar_url.present?
           = user_avatar_tag(group, :md)
       .infos.media-body
-        .title.media-heading.text-truncate
+        .title.name-title.media-heading.text-truncate
           - if group.group_member? current_user
             = link_to(main_app.topics_group_path(group), title: group.name, class: 'title') do
               = group.name
@@ -35,7 +35,10 @@
     .info.content-footer
       - if current_user.present? && group.group_member?(current_user)
         - group_user = GroupUser.find_by(user_id: current_user.id, group_id: group.id)
-        = link_to(t('groups.joined'), edit_group_group_user_path(id: group_user.id, group_id: group.id), class: "btn btn-primary btn-block btn-joined", remote: true)
+        - if group_user.owner?
+          = link_to(t('groups.role_owner'), '', class: "btn btn-primary btn-block btn-joined", remote: true)
+        - else
+          = link_to(t('groups.joined'), edit_group_group_user_path(id: group_user.id, group_id: group.id), class: "btn btn-primary btn-block btn-joined", remote: true)
       - else
         = link_to t('groups.join_group'), main_app.new_group_group_user_path(group_id: group.id), class: 'btn btn-primary btn-block', method: :get, remote: true
 - if current_user.present? && group.group_member?(current_user)
